# skills-mcp-bridge

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README_CN.md  start_codex.ps1  start_codex.sh
docs/: manual.md  manual_CN.md
examples/context7/: SKILL.md
examples/context7/assets/: mcp.json
examples/firecrawl/: SKILL.md
examples/firecrawl/assets/: mcp.json
src/: cli.rs  config.rs  errors.rs  main.rs  output.rs  types.rs  user_agent.rs
src/mcp_client/: call_tool.rs  connection.rs  core.rs  get_info.rs  get_prompt.rs  list_prompts.rs  list_resources.rs  list_tools.rs  mod.rs  notify.rs  read_resource.rs  text.rs  util.rs
