[package]
name = "call-mcp"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-saphyr = "0.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rmcp = { version = "0.12", features = ["client", "transport-streamable-http-client-reqwest"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
backoff = { version = "0.4", features = ["tokio"] }
